# chik

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/modules/audio/: CMakeLists.txt  audio.c  audio.h
src/modules/engine/: CMakeLists.txt  engine.c  engine.h  stat.c  stat.h
src/modules/gfx/: CMakeLists.txt  abstract.c  abstract.h  camera.c  camera.h  cull.c  cull.h  drawable.c  drawable.h  gfx.c  gfx.h  image.c  image.h  raster.c  raster.h  rendertarget.c  rendertarget.h  surface.c  surface.h  text.c  vertexasm.c  vertexasm.h
src/modules/gfxVK/: CMakeLists.txt  gfxVK.c  gfxVK.h  imageops.c  imageops.h  instance.c  instance.h  presentation.c  presentation.h  renderpasses.c  renderpasses.h  shader.c  shader.h  stubs.c  swapchain.c  swapchain.h
src/modules/platform/: CMakeLists.txt  platform.c  platform.h
src/scripts/: gen.cmake
